[metadata]
name = chia
author = Brett M. Morris, Andrea Guzman Mesa
author_email = morrisbrettm@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/chia
description = Chromospheric activity via spectroscopy
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = bmorris3/chia

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    matplotlib
    scipy

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
chia = data/*

[tool:pytest]
testpaths = "chia" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    chia/_astropy_init*
    chia/conftest.py
    chia/*setup_package*
    chia/tests/*
    chia/*/tests/*
    chia/extern/*
    chia/version*
    */chia/_astropy_init*
    */chia/conftest.py
    */chia/*setup_package*
    */chia/tests/*
    */chia/*/tests/*
    */chia/extern/*
    */chia/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
